# BOOKS

./: .gitignore  README.md
Effective_modern_c++/: overview.cpp
Head_first_design_patterns/: ReadMe.md
Head_first_design_patterns/introduction/: Duck.java  FlyBehavior.java  FlyNoWay.java  FlyWithWings.java  MallardDuck.java  MiniDuckSimulator.java  MuteQuack.java  Notes.md  Quack.java  QuackBehavior.java  Squack.java
programming_challenges/: README.md
programming_challenges/getting_started/: 3n+1.cpp  CMakeLists.txt  README.md  check_the_check.cpp  graphical_editor.cpp  interpreter.cpp  lcd_display.cpp  minesweeper.cpp  the_trip.cpp
